--- a/dokumentace/dokumentace.tex
+++ b/dokumentace/dokumentace.tex
@@ -44,7 +44,7 @@
 \section{Zadání}
 Popis bezpečnosti vybraných šifer a jejich prolamování pomocí vybraných útoků.
 \section{Analýza problému}
-Aby bylo možné bezpečně uchovat či poslat důležitá data, tak je potřeba tyto data uložit do formy, ze které by případný útočník nedokázal zjistit obsah dat. Existují dvě hlavní vědní disciplíny, které tento úkol dokáží splnit. První z nich je steganografie, která má za úkol utajit existenci dat (například přepsání nejméně důležitých bitů v obrázku, data rozložena na písmena, která se vyskytují na druhé pozici v každém slově nově vytvořené věty aj.). Druhá z nich je kryptografie, která vstupní data zašifruje do nečitelné podoby pomocí šifrovacích algoritmů. Jelikož výkon počítačů raketově vzrůstá, tak se dost často stává, že starší šifrovací algoritmy jsou prolamovány v relativné krátkém čase (5 hodin, 1 den atp.). Z tohoto důvodu je nutné vynalézat nové a účinější šifrovací algoritmy, které "nebude" možno prolomit v reálném čase. V kapitolách \ref{sec:sym}, \ref{sec:asym} jsou popsány mnou vybrané šifrovací algoritmy. Některé šifrovací algoritmy jsou již prolomeny a již se ve většině případů nepoužívají, nebo stále používané algoritmy, které ještě nebyly úplně prolomeny.
+Aby bylo možné bezpečně uchovat či poslat důležitá data, tak je potřeba tyto data uložit do formy, ze které by případný útočník nedokázal zjistit obsah dat. Existují dvě hlavní vědní disciplíny, které tento úkol dokáží splnit. První z nich je steganografie, která má za úkol utajit existenci dat (například přepsání nejméně důležitých bitů v obrázku, data rozložena na písmena, která se vyskytují na druhé pozici v každém slově nově vytvořené věty aj.). Druhá z nich je kryptografie, která vstupní data zašifruje do nečitelné podoby pomocí šifrovacích algoritmů. Jelikož výkon počítačů raketově vzrůstá, tak se dost často stává, že starší šifrovací algoritmy jsou prolamovány v relativné krátkém čase (5 hodin, 1 den atp.). Z tohoto důvodu je nutné vynalézat nové a účinější šifrovací algoritmy, které "nebude" možno prolomit v reálném čase. V kapitolách \ref{sec:sym}, \ref{sec:asym} jsou popsány mnou vybrané šifrovací algoritmy. Některé šifrovací algoritmy jsou již prolomeny a již se ve většině případů nepoužívají, nebo stále používané algoritmy, které ještě nebyly úplně prolomeny. Bezpečnost každého šifrovacího systému závisí na dvou věcech: "matematické bezpečnosti" a "implementační bezpečnosti".
 
 \section{Symetrické šifry}
 Symetrické šifry používají pro zašifrování i dešifrování stejný klíč. Zašifrovaná data nesmí být dešifrována bez znalosti klíče i v případě, že útočník zná typ použitého šifrovacího algoritmu. Do této dokumentace jsem vypsal 3 z nejznámějších symetrických šifer(\nameref{subsec:des}, \nameref{subsec:idea}, \nameref{subsec:aes}).  
@@ -52,21 +52,19 @@ Symetrické šifry používají pro zašifrování i dešifrování stejný klí
 	\subsection{DES}
 	\label{subsec:des}
 		\subsubsection{Popis}
-		\textbf{Data Encryption Standard (DES)} je symetrická šifra vyvinutá v 70. letech vědci z firmy IBM. DES se skládá z 16 iterací na základě feistlově síti, kdy ke každé iteraci se využívá podklíč o velikosti 48 bitů, který se liší v každé iteraci. Každý blok je velký 64 bitů, klíč je velký 56 bitů.
+		\textbf{Data Encryption Standard (DES)} je symetrická bloková šifra vyvinutá v 70. letech vědci z firmy IBM. DES se skládá z 16 iterací na základě feistlově síti, kdy ke každé iteraci se využívá podklíč o velikosti 48 bitů, který se liší v každé iteraci. Každý blok je velký 64 bitů, klíč je velký 56 bitů.
 		\subsubsection{Prolomení}
 		Již od vytvoření DESu se vědělo, že algortimus obsahuje bezpečnostní slabiny (například v prvotní implementaci se klíč v části S-box nevolil náhodně). Dnes lze DES prolomit Brute-force (hrubou sílou) útokem již za méně než 24 hodin, což je velice krátká doba. Brute-force útok je takový útok, který se v kryptoanalýze snaží o rozluštění šifry bez znalosti dešifrovacího klíče. V praxi se jedná o systematické testování všech možností (nebo omezené podmnožiny) všech možných kombinací. Čas potřebný pro útok roste exponenciálně s rostoucí délkou klíče.
 		\par
 		Existují však i rychlejší varianty prolomení této šifry:
 		\begin{itemize}
 			\item \textbf{Diferenciální kryptoanalýza (DC)} -- Diferenciální kryptoanalýzu lze považovat za \textbf{chosen plaintext attack}, jejíž útok spočívá v zjištění výsledného zašifrovaného textu pro množinu vstupních dat. Pomocí rozšíření lze dosáhnout i útoků \textbf{known plaintext attack} nebo \textbf{ciphertext-only attack}. V těchto případech se vypočítá \textit{difference}, která se dá vypočítat mnoha způsoby (nejznámější je využití logické operace XOR). Na základě difference se vypočítá \textit{differential} (pár differencí), které jsou následně analyzovány útočníkem.
-			\begin{itemize}	
 				\item \textbf{Chosen-plaintext attack (CPA)} -- Útok se zakládá na náhodném výběru vstupních dat, které se pomocí šifrovacího algoritmu zašifrují a výsledná data jsou použita pro zjištění případných slabin šifrovacího algoritmu. Útok se dá dále rozdělit na dvě skupiny: \textbf{Batch/Adaptive chosen-plaintext attack}. \textbf{Batch} je neprofesiální, protože útočník si nejdřívě vybere celou skupinu vstupních dat a poté až šifruje. \textbf{Adaptive} je profesionální, protože útočník na samém začátku vybere část vstupních dat, které nechá zašifrovat. Po zašifrování vybírá další menší skupinu vstupních dat na základe výsledků šifrování dat předchozích. Pokud je daná šifra odolná proti chosen-plaintext útoku, je zároveň i odolná proti \textbf{Known-plaintext} a \textbf{Ciphertext-only} útoku.
 				\item \textbf{Known-plaintext attack (KPA)} -- Útočník využívající tento útok má přístup jak ke vstupním datům (také nazýváno jako \textit{crib}, slangový výraz pro podvádění), tak i k zašifrovaným vstupním datům. Protože útočník zná jak vstup, tak i výstup, lze pomocí nich zjistit dešifrovací klíč/číselník.
 				\item \textbf{Ciphertext-only attack (COA)} -- Jinak nazývaný \textbf{known-ciphertext attack}, je útok, kde útočník má přístup pouze k zašifrovaným datům a dokáže podle nich zjistit (vydedukovat, extrahovat) co nejvíce vstupních dat pro zjištění šifrovacího klíče.
-			\end{itemize}
-			\item \textbf{Daviesův útok} -- Daviesův útok byl vytvořen Donaldem Daviesem v roce 1987 (v roce 1994 byl výrazně upraven). Jedná se o\textbf{known-plaintext attack}, který je založený na nejednotné distribuci párů sousedních S-boxů za pomoci nastřádaných empirických rozdělení ze vstupních dat a zašifrovaných dat. Část klíče (bity) lze zjistit z dostatečného množství známých vstupních dat. Zbývající bity klíče lze následně zjistit z brute-force útoku. 
+			\item \textbf{Daviesův útok} -- Daviesův útok byl vytvořen Donaldem Daviesem v roce 1987 (v roce 1994 byl výrazně upraven). Jedná se o\textbf{known-plaintext attack}, který je založený na nejednotné distribuci výstupů párů sousedních S-boxů za pomoci nastřádaných empirických rozdělení ze vstupních dat a zašifrovaných dat. Část klíče (bity) lze zjistit z dostatečného množství známých vstupních dat. Zbývající bity klíče lze následně zjistit z brute-force útoku. 
 		\end{itemize}
-	V dnešní době se v některých případech využívá spíše 3DEX (triple-DES). Při zašifrování vstupních dat se data nejdříve zašifrují, poté dešifrují a následně znova zašifrují algoritmem DES. Velikost skupiny klíčů je $2^{112}$.
+	V dnešní době se v některých případech využívá spíše 3DES (triple-DES). Při zašifrování vstupních dat se data nejdříve zašifrují, poté dešifrují a následně znova zašifrují algoritmem DES. Velikost skupiny klíčů je $2^{112}$.
 		\subsubsection{Závěr}
 		V dnešní době se využívání DES silně nedoporučuje, protože rozšifrování pomocí brute-force útoku lze zvládnout za méně než 24 hodin, kdy brute-force útok je jeden z nejvíce časově náročných útoků.
 	\subsection{IDEA}
@@ -74,7 +72,7 @@ Symetrické šifry používají pro zašifrování i dešifrování stejný klí
 		\subsubsection{Popis}
 		\textbf{International Data Encryption Algorithm (IDEA)} je symetrická bloková šifra navržena v roce 1991 nahrazující existující šifru DES. Je postavena na šifře \textbf{Proposed Encryption Standard (PES)}. IDEA pracuje po 64bitových blocích za použití 128 bitového klíče. Celkový počet průchodů je 8,5 (8 identických transformací + vstupní transformace). Velká část bezpečnosti vyplývá ze střídání logických operací pracující s 16bitovými řetězci. Mezi použité operace se řadí modulární sčítání ($2^{16}$), modulární násobení ($2^{16} + 1$) a bitová nonekvivalence XOR. 
 		\subsubsection{Prolomení}
-		Již v roce 2011 proběhlo úspěšné prolomení IDEA s 8,5 průchody pomocí \textbf{meet-in-the-middle attack (MITM)}. Tento útok se zaměřuje na blokové šifry a dokáže exponenciálně zredukovat počet permutací  brute force při dešifrování textu, který byl zašifrován více jak jedním klíčem. Při útoku se provádí brute force jak na vstupní data, tak i na zašifrovaný text blokové šifry. Následně se útočník snaží zašifrovat vstupní data s využitím klíčů za účelem vytvoření pomocného zašifrovaného textu (při šifrování byl použit pouze jeden klíč). Současně se útočník snaží dešifrovat zašifrovaný text pomocí různých klíčů na vstupní data, která budou totožná s daty, která byla využita pro šifrování. Pokud se vstupní data shodují, je zde velká pravděpodobnost, že klíče použité při šifrování a dešifrování jsou dva klíče použité v blokové šifře. Podmínky pro tento útok jsou: vysoká kapacita disku pro uložení všech možností zašifrovaného textu a vstupních dat. Útočník má možnost pouze přistupovat k již vytvořeným datům, nelze si vytvářet nová. Proto se tento útok značí jako pasivní. Neplést si to s útokem \textbf{man-in-the-middle}.
+		Již v roce 2011 proběhlo úspěšné prolomení IDEA s 8,5 průchody pomocí \textbf{meet-in-the-middle attack (MITM)}. Tento útok se zaměřuje na blokové šifry a dokáže exponenciálně zredukovat počet permutací  brute-force při dešifrování textu, který byl zašifrován více jak jedním klíčem. Útok probíhá tak, že se pokoušíme zašifrovat vstupní text pomocí zvoleného šifrovacího algoritmu s využití seznamu klíčů, které jsou zjištěny ještě před samotným začátkem pomocí brute-force. Po zašifrování vstupního textu a uložení kombinací klíče a zašifrovaného textu do tabulky je tento postup opakován ale s tím rozdílem, že vstupní text se pokoušíme dešifrovat s využitím seznamu klíčů. Následně se porovnávají hodnoty vytvořených tabulek. Pokud byl nalezeny dva stejné záznamy v tabulkách, jsou klíče těchto záznamů uloženy do nové tabulky T. Na samotném konci jsou uložené páry v tabulce T otestovány stejným způsobem a kontroluje se jejich validita. V případě, že tento pár klíčů nefunguje na pár vstupních dat, je tento pár vstupních dat znovu otestován pomocí MITM.   Podmínky pro tento útok jsou: vysoká kapacita disku pro uložení všech možností zašifrovaného textu a vstupních dat. Útočník má možnost pouze přistupovat k již vytvořeným datům, nelze si vytvářet nová. Proto se tento útok značí jako pasivní. Neplést si to s útokem \textbf{man-in-the-middle}.
 		\par
 		V roce 2012 byla IDEA znovu prolomena. Při lámání byl použit \textbf{narrow-bicliques attack} s redukovanou šifrovací sílou 2 bitů. Biclique útok je založen na meet-in-the middle útoku. Tento útok lze aplikovat jak na blokové šifry, tak i hashové funkce. Šifra používá biclique strukturu (úplný biparitní graf, každý vstupní bod je propojen s každým výstupním bodem) k rozšíření počtu kol, které lze potencionálně napadnout. V praktickém hledisku je tento útok proti šifře IDEA neškodný, protože výpočetní složitost je rovna $2^{126.1}$.
 		\subsubsection{Závěr}
@@ -92,7 +90,7 @@ Symetrické šifry používají pro zašifrování i dešifrování stejný klí
 	V poslední iteraci se postup opakuje bez třetího kroku.
 		\subsubsection{Prolomení}
 		V dnešní době je šifra AES pro nejmenší použitelný klíč o velikosti 128 bitů stále neprolomená. Ani samotná NSA není schopna tuto šifru prolomit. Pro prolomení plné AES šifry pomocí brute-force útoku by bylo potřeba uložit $2^{88}$ bitů dat (38 bilionů terabytů, což je více dat než bylo v roce 2016 uloženo na všech počítačích na planetě).
-		\par Jako první útok lze zmínit \textbf{eXtended Sparse Linearization attack (XSL)}. Tento útok na svém začátku analyzuje interní strukturu šifry a z toho následně odvodí systém kvadratických souběžných rovnic. Tyto systémy rovnic jsou ve výsledku velmi velké (například 8000 rovnic s 1600 proměnými pro 128-bitový AES). Pro vypočítání těchto rovnic je využit algoritmus XSL (eXtended Sparse Linearization), pomocí kterého lze zjistit klíč. XSL algoritmus rozšiřuje systém kvadratických rovnic jejím vynásobením vybranými monomiály určitého stupně (monomiál je pojem polynomu).
+		\par Jako první útok lze zmínit \textbf{eXtended Sparse Linearization attack (XSL)}. Tento útok na svém začátku analyzuje interní strukturu šifry a z toho následně odvodí systém kvadratických souběžných rovnic. Tyto systémy rovnic jsou ve výsledku velmi velké (například 8000 rovnic s 1600 proměnými pro 128-bitový AES). Pro vypočítání těchto rovnic je využit algoritmus XSL (eXtended Sparse Linearization), pomocí kterého lze zjistit klíč. XSL algoritmus lze provést ve třech způsobech. První způsob zahrnuje vyřazení těch rovnic, které obsahují subklíče blokové šifry (je potřeba velké množství párů vstupní text-zašifrovaný text). Druhý způsob naopak využívá rovnice, které obsahují subklíče (pro fungování stačí jeden pár vstupního textu-zašifrovaného textu). Třetí způsob, neboli compact XSL, rozšiřuje systém kvadratických rovnic jejím vynásobením vybranými monomiály určitého stupně (monomiál je pojem polynomu).
 		\par Jako druhý útok lze zmínit \textbf{key-recovery attacks} (mezi tyto útoky lze zařadit i brute-force) v roce 2011 . Nejlepší výsledky tohoto útoku při získávání klíče jsou: pro AES 128 bit klíč je potřeba $2^{126}$ operací, pro AES 192 bit klíč je potřeba $2^{189.9}$ operací a pro AES 256 bit klíč je potřeba $2^{254.3}$  operací. Jednalo se pouze o teoretické útoky, nikoli praktické.
 		\subsubsection{Závěr}
 		AES šifra je stále nikým neprolomená a proto ji lze označit za vhodnou při šifrování dat.
@@ -107,12 +105,12 @@ Asymetrické šifry využívají při šifrování dva odlišné klíče, veřej
 		\subsubsection{Prolomení}
 		Při zjišťování klíče se používají dvě náhodně zvolená (nejlépe velká) prvočísla, je velice obtížné zjistit součin velkého čísla na dvě prvočísla (faktorizace). Nelze v rozumném čase nalézt dva činitele, neboť není znám algoritmus faktorizace, který by pracoval v polynomiálním čase vůči velikosti binárního zápisu čísla N.
 		\par
-		Lze zmínit útok \textbf{DROWN (Decrypting RSA with Obsolete and Weakened eNcryption)}, který byl veden na protokoly TSL podporující nezabezpečené SSLv2 protokoly. DROWN využívá \textbf{Adaptive chosen-ciphertext attack} (chosen-ciphertext útoku s použitím SSLv2 serveru). Pro dosažení tohoto útoku je potřeba mít velice velký výpočetní výkon. OpenSSL (odnož SSLv2) protokol měl v době nálezu DROWN útoku větší problém, protože se na tento protokol dal aplikovat speciální DROWN útok, který z důvodu drastického snížení nutnosti výpočetního výkonu umožňoval provést \textbf{man-in-the-middle attack}.
-\textbf{Batch} je neprofesiální, protože útočník si nejdřívě vybere celou skupinu vstupních dat a poté až šifruje. \textbf{Adaptive} je profesionální, protože útočník na samém začátku vybere část vstupních dat, které nechá zašifrovat. Po zašifrování vybírá další menší skupinu vstupních dat na základe výsledků šifrování dat předchozích
 			\begin{itemize}
+		\item Lze zmínit útok \textbf{DROWN (Decrypting RSA with Obsolete and Weakened eNcryption)}, který byl veden na protokoly TSL podporující nezabezpečené SSLv2 protokoly. DROWN využívá \textbf{Adaptive chosen-ciphertext attack} s použitím SSLv2 protokolu. Pro dosažení tohoto útoku je potřeba mít velice velký výpočetní výkon. OpenSSL protokol měl v době nálezu DROWN útoku větší problém, protože se na tento protokol dal aplikovat speciální DROWN útok, který z důvodu drastického snížení nutnosti výpočetního výkonu umožňoval provést \textbf{man-in-the-middle attack}.
+\textbf{Batch} je neprofesiální, protože útočník si nejdřívě vybere celou skupinu vstupních dat a poté až šifruje. \textbf{Adaptive} je profesionální, protože útočník na samém začátku vybere část vstupních dat, které nechá zašifrovat. Po zašifrování vybírá další menší skupinu vstupních dat na základe výsledků šifrování dat předchozích
 			 \item \textbf{Chosen-ciphertext attack} -- Tento útok ja založen na vybrání množiny šifrovaných dat, které jsou následně dešifrovány.
 			 \item \textbf{Adaptive chosen-ciphertext attack} -- Rozdíl oproti neadaptivnímu chosen-ciphertext útoku je ve vybírání množiny šifrovaných dat. Na samém začátku je vybrána podskupina šifrovaných dat, která jsou následně dešifrována. Na základě výsledku z prvního dešifrování je vybrána druhá podskupina šifrovaných dat, která je následně také dešifrována. Tento postup se opakuje až do konce množiny šifrovaných dat.
-			 \item \textbf{Man-in-the-middle attack} -- Princip útoku spočívá v odposlouchávání komunikace mezi účastníky tak, že se stane aktivním prostředníkem. Viz aféra Superfish s firmou Lenovo, kdy firma Superfish instalovala vlastní kořenový certifikát do nových počítačů firmy Lenovo, který analyzoval veškerý HTTPS provoz ve webovém prohlížeči a pomocí injektování JavaScriptového kódu do navštěvovaných webových stránek vkládal reklamy na základě historie prohlížení důvěřivého uživatele.
+			 \item \textbf{Man-in-the-middle attack} -- Princip útoku spočívá v odposlouchávání komunikace mezi účastníky tak, že útočník se stane aktivním prostředníkem. Viz aféra Superfish s firmou Lenovo, kdy firma Superfish instalovala vlastní kořenový certifikát do nových počítačů firmy Lenovo, který analyzoval veškerý HTTPS provoz ve webovém prohlížeči a pomocí injektování JavaScriptového kódu do navštěvovaných webových stránek vkládal reklamy na základě historie prohlížení důvěřivého uživatele.
 			\end{itemize}
 		\subsubsection{Závěr}
 		V dnešní době je RSA šifra při použití dostatečně velkého klíče neprůlomná a je doporučeno ji používat jak pro šifrování, tak i pro elektronický podpis za případu, že při komunikaci není použit protokol SSLv2, který v dnešní době není podporován.
